--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-preset-es2015": "^6.24.1",
     "emailjs": "^4.0.0",
     "framer-motion": "^6.3.15",
     "number-counter": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-onclickoutside": "^6.12.2",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^0.9.3",
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
